--- a/src/modules/SelectedWorks/components/SelectedWorksSlider/selected.works.slider.css
+++ b/src/modules/SelectedWorks/components/SelectedWorksSlider/selected.works.slider.css
@@ -14,7 +14,7 @@
   font-size: clamp(2.6rem, 2.188vw, 5.6rem);
   letter-spacing: 0.6vw;
   line-height: 1;
-  opacity: 0;
+  position: relative;
   text-transform: uppercase;
 
   .word {
