--- a/src/components/ScrollGallery/scroll.gallery.css
+++ b/src/components/ScrollGallery/scroll.gallery.css
@@ -7,42 +7,23 @@
   z-index: 6;
 }
 
-.scroll-gallery__heading {
-  position: absolute;
-  top: 18%;
-  left: 5%;
-  font-family: var(--font-family--primary);
-  font-size: 56px;
-  letter-spacing: 0.6vw;
-  line-height: 1;
-  text-transform: uppercase;
-
-  .word {
-    overflow-y: clip;
-  }
-}
-
 .scroll-gallery__list {
   display: inline-flex;
   gap: 80px;
   margin: 0;
   padding-inline: clamp(120px, 7.813vw, 200px);
   z-index: 10;
-
-  .selected-works-tile__link {
-    height: 35svh;
-  }
 }
 
-.scroll-gallery__list--init {
+/* .scroll-gallery__list--init {
   flex-direction: row;
 
   .selected-works-tile__link {
     height: 50svh;
   }
-}
+} */
 
-.scroll-gallery__image-wrapper {
+/* .scroll-gallery__image-wrapper {
   height: 100%;
   left: 0;
   position: absolute;
@@ -83,17 +64,9 @@
     top: 0;
     width: 100%;
   }
-}
+} */
 
-.scroll-gallery__image-overlay {
-  height: 100%;
-  mix-blend-mode: multiply;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-}
-
-.scroll-gallery__image {
+/* .scroll-gallery__image {
   background-size: cover;
   background-position: 50% 0;
   background-attachment: fixed;
@@ -105,4 +78,13 @@
   width: 100%;
   height: 100%;
   z-index: 0;
+} */
+
+.scroll-gallery__item {
+  list-style: none;
+}
+
+.scroll-gallery__image {
+  box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.6);
+  height: 60svh;
 }
