--- a/src/modules/SelectedWorks/components/SelectedWorksSlider/selected.works.slider.css
+++ b/src/modules/SelectedWorks/components/SelectedWorksSlider/selected.works.slider.css
@@ -28,6 +28,7 @@
 }
 
 .selected-works-slider__list {
+  aspect-ratio: 1 / 0.267;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   justify-content: space-between;
@@ -36,18 +37,20 @@
   width: 100%;
 
   @media (max-width: 2560px) {
-    grid-template-columns: repeat(4, 1fr);
-  }
-
-  @media (max-width: 1920px) {
+    aspect-ratio: 1 / 0.33;
     grid-template-columns: repeat(4, 1fr);
   }
 
   @media (max-width: 1280px) {
+    aspect-ratio: 1 / 0.44;
     grid-template-columns: repeat(3, 1fr);
   }
 
   @media (max-width: 768px) {
+    aspect-ratio: 1 / 1.2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     grid-template-columns: repeat(1, 1fr);
     gap: 40px;
   }
