--- a/archive/consumers-energy/src/assets/base.css
+++ b/archive/consumers-energy/src/assets/base.css
@@ -78,7 +78,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
   line-height: 1.6;
-  min-height: 100vh;
+  min-height: 100svh;
   min-height: fill-available;
   min-height: -moz-available;
   min-height: -webkit-fill-available;
@@ -96,6 +96,6 @@ body {
 
 @-moz-document url-prefix() {
   #app {
-    height: 100vh;
+    height: 100svh;
   }
 }
