--- a/src/pages/Work/components/WorkHero/work.hero.css
+++ b/src/pages/Work/components/WorkHero/work.hero.css
@@ -41,6 +41,10 @@
     justify-content: flex-end;
     gap: 20px;
   }
+
+  @media (max-width: 480px) {
+    align-items: center;
+  }
 }
 
 .work-hero-details__specs-wrapper {
@@ -59,6 +63,11 @@
   align-items: flex-end;
   gap: 4px;
   position: relative;
+
+  @media (max-width: 480px) {
+    align-items: center;
+    text-align: center;
+  }
 }
 
 .work-hero-details__specs-divider {
@@ -86,7 +95,7 @@
 .work-hero-details__specs-heading {
   font-family: var(--font-family--tertiary);
   font-size: 16px;
-  font-size: clamp(1.1rem, 0.625vw, 16px);
+  font-size: clamp(1rem, 0.625vw, 1.6rem);
   font-weight: 600;
   letter-spacing: 2px;
   line-height: 1;
@@ -95,6 +104,10 @@
 
   .word {
     overflow: hidden;
+  }
+
+  @media (max-width: 480px) {
+    text-align: center;
   }
 }
 
@@ -115,6 +128,10 @@
   padding-inline-end: clamp(15px, 0.586vw, 15px);
   position: relative;
   text-transform: uppercase;
+
+  @media (max-width: 480px) {
+    //margin: 0 0 0 auto;
+  }
 }
 
 .work-hero-details__link-text {
